buildscript {
    repositories {
        maven {
            url = "https://maven.minecraftforge.net/"
        }
        maven {
            url = "https://libraries.minecraft.net/"
        }
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
        maven {
            url = "https://repo.spongepowered.org/maven/"
        }
        maven {
            url = "https://maven.parchmentmc.org/"
        }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
        classpath "org.parchmentmc:librarian:1.+"
    }
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "eclipse"
apply plugin: "maven-publish"
apply plugin: "org.parchmentmc.librarian.forgegradle"

repositories {
    jcenter()
    flatDir {
        dirs "libs"
    }
    maven {
        url = "https://repo.spongepowered.org/maven/"
    }
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        url = "https://maven.tterrag.com/"
    }
    maven {
        url = "https://maven.blamejared.com/"
    }
    maven {
        url = "https://jitpack.io/"
    }
    maven {
        url = "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://modmaven.dev/"
    }
}

sourceSets {
    main
}

version = "3.2.1.1"
group = "thelm.packagedauto"
archivesBaseName = "PackagedAuto-1.19.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: "parchment", version: "2022.10.16-1.19.2"
    runs {
        client = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run").canonicalPath
            source sourceSets.main
        }
        server = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run").canonicalPath
            source sourceSets.main
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.19.2-43.1.52"

    implementation fg.deobf("appeng:appliedenergistics2-forge:12.8.4")
    implementation fg.deobf("mezz.jei:jei-1.19.2-forge:11.4.0.286")
    implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.19.2:10.0.16")
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77")
    implementation fg.deobf("com.simibubi.create:create-1.19.2:0.5.0.f-15:all")
    implementation fg.deobf("mekanism:Mekanism:1.19.2-10.3.5.474")
    implementation fg.deobf("mekanism:Mekanism:1.19.2-10.3.5.474:generators")

    //JitPack

    //CurseMaven
    implementation fg.deobf("curse.maven:shutup-experimental-settings-407174:3759881")
    implementation fg.deobf("curse.maven:applied-mekanistics-574300:4058235")
    implementation fg.deobf("curse.maven:cucumber-272335:4055932")
    implementation fg.deobf("curse.maven:extended-crafting-268387:4057316")
    implementation fg.deobf("curse.maven:ato-405593:4046926")
}

jar {
    manifest {
        attributes([
                "Specification-Title": "PackagedAuto",
                "Specification-Vendor": "thelm",
                "Specification-Version": "3",
                "Implementation-Title": "${archivesBaseName}",
                "Implementation-Version": "${version}",
                "Implementation-Vendor": "thelm"
                //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ],)
    }
}
